# binarybeech

./: .pre-commit-config.yaml  LICENSE  README.md  adult.ipynb  conftest.py  iris.ipynb  notebookb943c7be21.ipynb  prostate_create_branch.json  prostate_create_origin.json  prostate_l1_branch.json  prostate_l1_origin.json  prostate_l2_branch.json  prostate_l2_origin.json  pyproject.toml  requirements.txt  titanic.ipynb  titanic_origin.json  tmp_dump_cart.py  tree.ipynb  treeGradientBoost.ipynb
.github/: ci.yml
.github/workflows/: ci.yml  isort.yml  python-package.yml
binarybeech/: __init__.py  attributehandler.py  binarybeech.py  brentsscalarminimizer.py  datahandler.py  datamanager.py  extra.py  math.py  metrics.py  minimizer.py  missingshandler.py  plot.py  reporter.py  trainingdata.py  tree.py  utils.py  visualize.py
notebooks/: adult.ipynb  brent.ipynb  doc.ipynb  iris (1).ipynb  iris.ipynb  iris_unsupervised.ipynb  penguin.ipynb  simulatedannealing.ipynb  titanic.ipynb  treeGradientBoost.ipynb
scripts/: compare_cart_iris.py  compare_gbt_covtype.py
src/: math.py  missingshandler.py  trainingdata.py
src/binarybeech/: attributehandler.py  binarybeech.py  math.py  metrics.py  minimizer.py  reporter.py  tree.py  utils.py
tests/: t_est_housing.py  t_est_iris.py  t_est_titanic.py  test_adaboost.py  test_adult.py  test_attributehandler_binned.py  test_binarybeech.py  test_brentsscalarminimizer.py  test_datamanager.py  test_housing.py  test_iris.py  test_iris_binned.py  test_iris_unsupervised.py  test_math.py  test_metrics_extra.py  test_minimizer.py  test_plot.py  test_prostate.py  test_reporter.py  test_titanic.py  test_titanic_update.py  test_trainingdata.py  test_tree.py  test_utils.py  test_utils_extra.py  test_visualize.py
