[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling]
name = "binarybeech"
version = "0.1.0"
description = "Simplistic algorithms to train decision trees for regression and classification"
authors = ["Armin Witte <your.email@example.com>"]

[tool.hatchling.dependencies]
python = "^3.7"
numpy = "^1.19"
scipy = "^1.5"
pandas = "^1.2"
treelib = "^1.6"

[tool.hatchling.dev-dependencies]
black = "^20.8b0"
isort = "^5.6.4"

[tool.black]
version = "20.8b0"

[tool.isort]
profile = "black"
