[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binarybeech"
description = "Simplistic algorithms to train decision trees for regression and classification"
version = "0.0.9"
authors = [
  { name="Armin Witte"},
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
keywords = [
    "machine learning",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"numpy>=1.19.0",
	"scipy>=1.7.0",
        "pandas>=1.3.0",
        "treelib",
        "matplotlib"
]
[project.urls]
"Homepage" = "https://github.com/arminwitte/binarybeech"
"Bug Tracker" = "https://github.com/arminwitte/binarybeech/issues"

[tool.coverage.run]
source = ['binarybeech']
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.hatchling.dependencies]
python = "^3.7"
numpy = "^1.19"
scipy = "^1.5"
pandas = "^1.2"
treelib = "^1.6"

[tool.hatchling.dev-dependencies]
black = "^20.8b0"
isort = "^5.6.4"

[tool.black]
version = "20.8b0"

[tool.isort]
profile = "black"
