[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binarybeech"
description = "Simplistic algorithms to train decision trees for regression and classification"
version = "0.3.1"
authors = [
  { name="Armin Witte"},
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
keywords = [
    "machine learning", "supervised learning", "unsupervised learning", "decision tree"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0"
]
[project.urls]
"Homepage" = "https://github.com/arminwitte/binarybeech"
"Bug Tracker" = "https://github.com/arminwitte/binarybeech/issues"

[tool.coverage.run]
source = ['binarybeech']
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.hatchling.dependencies]
python = "^3.7"
numpy = "^1.19"
scipy = "^1.5"
pandas = "^1.2"
treelib = "^1.6"

[tool.hatchling.dev-dependencies]
ruff = "^0.4"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "I", "B"]
extend-select = ["RUF"]
src = ["src"]

[project.optional-dependencies]
visualize = [
    "treelib",
    "matplotlib"
]
asgi = [
    "uvicorn>=0.17",
    "uvloop>=0.16"
]
